Bug 169592 - CBR Files appear to be rendered at the wrong aspect ratio
Summary: CBR Files appear to be rendered at the wrong aspect ratio
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: Comicbook backend (other bugs)
Version First Reported In: 0.7
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-22 17:07 UTC by Brian Beck
Modified: 2008-09-01 19:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Rendering Comparison Between QComicBook and Okular (769.04 KB, image/png)
2008-08-22 17:08 UTC, Brian Beck
Details
Image and CBR comparison (752.77 KB, image/png)
2008-09-01 19:29 UTC, Brian Beck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Brian Beck 2008-08-22 17:07:17 UTC
Version:           0.7 (using KDE 4.1.0)
OS:                Linux
Installed from:    Ubuntu Packages

If I open a CBR file the pages look "fat".  If I open that same file in QComicBook the pages look as they ought to.  I've attached a screenshot that should make it clear what I mean.

If I can help in any way let me know.
Comment 1 Brian Beck 2008-08-22 17:08:58 UTC
Created attachment 26984 [details]
Rendering Comparison Between QComicBook and Okular

Notice how Okular seems to render the page a little too wide.
Comment 2 Pino Toscano 2008-08-22 17:15:25 UTC
Do you have an example document showing the problem?
(If it cannot be shipped publically, you can send it to me directly.)
Comment 3 Pino Toscano 2008-09-01 19:04:28 UTC
Hello Brian,

could you please provide a document?
Comment 4 Brian Beck 2008-09-01 19:16:53 UTC
Pino,
Here's a link to a cbr file that shows the incorrect aspect ration in okular, but looks fine in QComicbook.

http://rapidshare.com/files/141847071/Supergirl_032__2008___Minutemen-Dizzy_.cbr.html

Thanks,
Brian
Comment 5 Brian Beck 2008-09-01 19:29:23 UTC
Created attachment 27174 [details]
Image and CBR comparison
Comment 6 Brian Beck 2008-09-01 19:31:57 UTC
I looked up cbr on wikipedia to find out what exactly a cbr file was.  It is apparently a series of images in a rar archive.  I'm sure you were already aware of this.  So I decompressed the cbr file with unrar (UNRAR 3.71 beta 1 freeware Copyright (c) 1993-2007 Alexander Roshal), and displayed the first image in okular.  It looks fine.  I've taken a screenshot of the first page image file rendered by okular, and the first page of the cbr file rendered by okular to show the difference.  See Comment #5 (id=27174)

-- Brian
Comment 7 Pino Toscano 2008-09-01 19:44:13 UTC
Thanks, the testcase was quite useful indeed.

The problems has been fixed:
- for KDE 4.1.2 (r855908)
- for KDE 4.2 (r855907)

Thanks for your report!