Use the size as specified by the images, not a fake one.

BUG: 169592

svn path=/trunk/KDE/kdegraphics/okular/; revision=855907